--- a/client/templates/client/index.html
+++ b/client/templates/client/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-{% load static %}
+{% load render_bundle from webpack_loader %}
 <html lang="en">
   <head>
     <style>
-        * {
+      * {
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -44,6 +44,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="{% static "client/client.js" %}"></script>
+    {% render_bundle 'client' %}
   </body>
 </html>
