--- a/client/templates/client/index.html
+++ b/client/templates/client/index.html
@@ -1,47 +1,15 @@
 <!DOCTYPE html>
-{% load render_bundle from webpack_loader %}
+{% load static %}
 <html lang="en">
   <head>
-    <style>
-      * {
-        margin: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      }
-      .counter {
-        height: 42px;
-        display: flex;
-      }
-
-      .name {
-        width: 300px;
-      }
-
-      .mbtn {
-        margin-right: 10px;
-      }
-
-      .invisible {
-        display: block;
-      }
-
-      .counter-list {
-        display: flex;
-        width: 600px;
-        flex-direction: column;
-      }
-
-      .reset {
-        width: 213px;
-        margin-left: 300px;
-      }
-    </style>
+    <link rel="icon" href="{% static 'favicon.ico' %}" />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter app</title>
   </head>
   <body>
     <div id="root"></div>
-    {% render_bundle 'client' %}
+    <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
